--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "blogapp2",
   "version": "0.0.0",
   "private": true,
+  "main": "app.js",
   "scripts": {
-    "start": "nodemon ./bin/www"
+    "start": "electron ."
   },
   "dependencies": {
     "bcrypt": "^0.8.6",
@@ -11,6 +12,9 @@
     "connect-flash": "^0.1.1",
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
+    "electron": "^0.4.1",
+    "electron-jade": "^1.3.1",
+    "electron-pug": "^1.4.2",
     "express": "~4.13.1",
     "express-session": "^1.13.0",
     "morgan": "~1.6.1",
@@ -24,6 +28,7 @@
     "serve-favicon": "~2.3.0"
   },
   "devDependencies": {
+    "electron-prebuilt": "^1.2.1",
     "nodemon": "^1.9.2"
   }
 }
