--- a/package.json
+++ b/package.json
@@ -4,16 +4,17 @@
   "private": true,
   "main": "app.js",
   "scripts": {
-    "start": "electron ."
+    "start": "nodemon ./bin/www"
   },
   "dependencies": {
+    "app": "^0.1.0",
     "bcrypt": "^0.8.6",
     "body-parser": "~1.13.2",
     "connect-flash": "^0.1.1",
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
-    "electron": "^0.4.1",
-    "electron-jade": "^1.3.1",
+   
+    
     "electron-pug": "^1.4.2",
     "express": "~4.13.1",
     "express-session": "^1.13.0",
